--- a/.gitignore
+++ b/.gitignore
@@ -7,10 +7,6 @@
 node_modules/
 dist/
 
-# lock files
-yarn.lock
-package-lock.json
-
 # Compiled Java class files
 *.class
 
@@ -53,3 +49,4 @@ Thumbs.db
 *.mov
 *.wmv
 
+.data
