--- a/package.json
+++ b/package.json
@@ -1,23 +1,24 @@
 {
-  "name": "contextfree-subql-starter",
-  "version": "0.0.4",
-  "description": "This SubQuery project can be use as a starting point for Contextfree network",
+  "name": "subql-dictionary",
+  "version": "1.0.0",
+  "description": "A SubQuery Dictionary Project that provides increased indexing speed to all projects",
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc -b",
     "prepack": "rm -rf dist && npm build",
     "test": "jest",
-    "codegen": "./node_modules/.bin/subql codegen"
+    "codegen": "./node_modules/.bin/subql codegen",
+    "start:docker": "docker-compose pull && docker-compose up --remove-orphans"
   },
-  "homepage": "https://github.com/subquery/contextfree-subql-starter",
-  "repository": "github:subquery/contextfree-subql-starter",
+  "homepage": "https://github.com/subquery/subql-dictionary",
+  "repository": "github:subquery/subql-dictionary",
   "files": [
     "dist",
     "schema.graphql",
     "project.yaml"
   ],
   "author": "SubQuery Network",
-  "license": "MIT",
+  "license": "Apache-2.0",
   "devDependencies": {
     "@polkadot/api": "^7",
     "@subql/types": "latest",
